# MCP-client-for-FastAPI-mcp-server

./: .gitignore  README.md  main.py  pyproject.toml  queue.ipynb
auth/: auth.py
client/: client_anthropic.py  client_gemini.py  client_openai.py
core/: db.py
models/: user.py
queue/: receive.py  send.py
