[project]
name = "signup-login"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "anthropic>=0.54.0",
    "fastapi-mcp>=0.3.4",
    "fastapi-mcp-client>=0.4.0",
    "fastapi[standard]>=0.115.13",
    "google-genai>=1.22.0",
    "openai>=1.91.0",
    "streamlit>=1.46.0",
]
